# velma

./: .editorconfig  .gitignore  LICENSE  Makefile  README.md  dev.requirements.txt  flake.nix  hello.py  pyproject.toml  setup.cfg  setup.py  standalone_shared_object.mk  token_utils.c  velma.nix  vera.pyi
examples/profiles/: demo
examples/rules/: list_files.py  print_token_region.py  report_this.py
velma/: __main__.py  vera_tokens.h
vera/: file_read.c  internal.h  token_utils.c  vera.c  vera_tokens.h
