[metadata]
name = velma
version = 1.0
description = Modern Reimplementation of vera built with C internals
author = Sigmanificient
author_email = yohann.boniface@epitech.eu
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Programming Language :: Python :: 3
  Programming Language :: C
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
zip_safe = False
