[metadata]
name = velma
version = 0.0.1
description = Modern Reimplementation of vera built with C internals
author = Sigmanificient
author_email = yohann.boniface@epitech.eu
license = MIT
keywords = vera, c_tokenizer
platform = unix, linux, osx
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3 :: Only
  Programming Language :: C

[options]
python_requires = >=3.8
packages = velma
